# Video-Musique

./: .gitignore  README.md  index.html  main.py  mixeraudio.py  package.json  requirements.txt  tailwind.config.js  vite.config.ts
src/: App.tsx  __init__.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ffmpeg.rs  lib.rs  main.rs  models.rs
src/components/: AudioPanel.tsx  ExportPanel.tsx  Header.tsx  SettingsPanel.tsx  StatusBar.tsx  VideoPanel.tsx  index.ts
src/core/: __init__.py  config.py  ffmpeg.py  models.py
src/gui/: __init__.py  app.py  controllers.py  theme.py
src/gui/widgets/: __init__.py  media_panel.py  progress_panel.py  volume_slider.py
src/store/: useStore.ts
src/styles/: index.css
src/types/: index.ts
src/utils/: __init__.py  helpers.py  logger.py
tests/: __init__.py  conftest.py  test_config.py  test_ffmpeg.py  test_logger.py  test_models.py
